test/e2e/chainsaw/grpcroute-header-before-weight/assertions/grpcroute-initial.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-hbw
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - backendRefs:
        - name: grpcroute-header-before-weight-stable-service
        - name: grpcroute-header-before-weight-canary-service
          (weight): 0
