test/e2e/chainsaw/grpcroute-header-before-weight/resources/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-hbw
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  rules:
    - backendRefs:
        - name: grpcroute-header-before-weight-stable-service
          port: 80
        - name: grpcroute-header-before-weight-canary-service
          port: 80
