test/e2e/chainsaw/grpcroute-header-before-weight/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcroute-header-before-weight-stable-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: grpcroute-header-before-weight
---
apiVersion: v1
kind: Service
metadata:
  name: grpcroute-header-before-weight-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: grpcroute-header-before-weight
